samples/_failures_safe/1761442700_55604e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d48c4545.c: In function ‘token_type_name’:
./samples/SAFE/__tmp_d48c4545.c:167:9: error: expected declaration or statement at end of input
  167 |         default: return "UNKNOWN";
      |         ^~~~~~~
./samples/SAFE/__tmp_d48c4545.c:167:9: error: expected declaration or statement at end of input
